--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <canvas id="canvas" width="800" height="800"></canvas>
     <script src="util.js"></script>
-    <script src="twothousand.js"></script>
+    <script src="twoThousandFortyEight.js"></script>
     <script src="draw.js"></script>
     <script src="main.js"></script>
   </body>
