--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <canvas id="canvas" width="800" height="800"></canvas>
+    <script src="controller.js"></script>
     <script src="util.js"></script>
     <script src="twoThousandFortyEight.js"></script>
     <script src="draw.js"></script>
