--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <canvas id="canvas" width="800" height="800"></canvas>
     <script src="lodash.js"></script>
+    <script src="utils.js"></script>
     <script src="controller.js"></script>
     <script src="twoThousandFortyEight.js"></script>
     <script src="draw.js"></script>
