--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="controller.js"></script>
     <script src="twoThousandFortyEight.js"></script>
     <script src="draw.js"></script>
+    <script src="tests.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
